<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Terminal_Group_Monitor_typ" Id="{4b8c1560-bbaa-0f46-2f19-bc2b5904247b}">
    <Declaration><![CDATA[TYPE Terminal_Group_Monitor_typ : 	
	STRUCT  
		SubSysName		: STRING[20];	
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>