<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Terminal_Group_Parameter_typ" Id="{2c6c7d5e-648b-06ab-260b-0fa1b46756b8}">
    <Declaration><![CDATA[TYPE Terminal_Group_Parameter_typ : 	
	STRUCT  (*parameter structure*)
		GroupName			: STRING[20];
		GroupID				: USINT;	
		PosForLog			: USINT;
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>