<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Terminal_Ctrl_typ" Id="{3e2541cc-b304-093e-2f59-f232a0f926ed}">
    <Declaration><![CDATA[TYPE Terminal_Ctrl_typ : 	
	STRUCT
  
		In : Terminal_Input_typ;
		
		Out : Terminal_Output_typ;
		
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>