<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Terminal_Status_typ" Id="{200ca15c-b537-0c0e-2d01-50a9bf2d23fc}">
    <Declaration><![CDATA[TYPE Terminal_Status_typ : 	
	STRUCT  
		TerminalState:  UDINT;
		Active:         BOOL;	
		Fault:          BOOL;
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>